# python-credly-cert-gatherer

./: .gitignore  azure.yml  credly.yml  dev-requirements.txt  example.sh  fetch.py  get-cert-filter.py  main.py  pyproject.toml  readme.md  requirements.txt
example/: example_certs.csv  example_users.csv
